--- a/manifest.json
+++ b/manifest.json
@@ -15,28 +15,28 @@
         "HOME": "/root",
         "LANG": "C.UTF-8",
         "LC_ALL": "C.UTF-8",
-        "PATH": "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
+        "PATH": "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
     },
     "custom": {
         "gear-builder": {"category": "analysis", "image": "jbwexler/wbhi-bids:0.1.0"},
-        "flywheel": {"suite": "WBHI"},
+        "flywheel": {"suite": "WBHI"}
     },
     "inputs": {"key": {"base": "api-key"}},
     "config": {
         "redcap_api_key": {"description": "REDCap API key", "type": "string"},
         "gmail_address": {
             "description": "Address of gmail account to use for sending emails",
-            "type": "string",
+            "type": "string"
         },
         "gmail_password": {
             "description": "Password of gmail account to use for sending emails",
-            "type": "string",
+            "type": "string"
         },
         "debug": {
             "default": false,
             "description": "Log debug messages",
-            "type": "boolean",
-        },
+            "type": "boolean"
+        }
     },
-    "command": "python run.py",
+    "command": "python run.py"
 }
